--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -49,8 +49,8 @@ jobs:
             IDENTIFY_VERSION_KEY=${{ github.sha }}
           push: true
           tags: |
-            lionyuyu/texas-poker-game:api-latest
-            lionyuyu/texas-poker-game:api-${{ github.event.release.tag_name || env.commit_date }}
+            ntshav/texas-poker-game:api-latest
+            ntshav/texas-poker-game:api-${{ github.event.release.tag_name || env.commit_date }}
 
   build_client:
     name: Build client docker and push.
@@ -88,8 +88,8 @@ jobs:
             IDENTIFY_VERSION_KEY=${{ github.sha }}
           push: true
           tags: |
-            lionyuyu/texas-poker-game:nginx-latest
-            lionyuyu/texas-poker-game:nginx-${{ github.event.release.tag_name || env.commit_date }}
+            ntshav/texas-poker-game:nginx-latest
+            ntshav/texas-poker-game:nginx-${{ github.event.release.tag_name || env.commit_date }}
 
   deploy:
     name: Deploy To Server
