--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -31,7 +31,7 @@ services:
       - app-network
 
   nginx:
-    image: lionyuyu/texas-poker-game:nginx-latest
+    image: ntshav/texas-poker-game:nginx-latest
     build:
       context: ../client
       args:
@@ -52,7 +52,7 @@ services:
       - app-network
 
   api:
-    image: lionyuyu/texas-poker-game:api-latest
+    image: ntshav/texas-poker-game:api-latest
     build:
       context: ../server
       args:
